# eda_practice

./: .gitignore  README.md  main.py  pyproject.toml  requirements-full.txt  requirements-min.txt  requirements.txt
customer-segmentation-framework/: INTRODUCTION_COMPLETION_STATUS.md  NOTEBOOK_COMPLETION_GUIDE.md  README.md
customer-segmentation-framework/00_project_setup/: data_validation.ipynb  environment_configuration.ipynb  setup.ipynb
customer-segmentation-framework/04_cross_analysis_integration/: automated_eda_reporting.ipynb  integrated_customer_profiling.ipynb  progressive_analysis_pipeline.ipynb
customer-segmentation-framework/05_information_theory_applications/: cross_variable_information_theory.ipynb  entropy_based_feature_selection.ipynb
entity_resolution_ideas/: stability_robustness_analysis_for_ER.ipynb
feature-engineering-framework/: COMPREHENSIVE_FEATURE_ENGINEERING_DEMO.ipynb  DEPLOYMENT_PLAN.md  DEVELOPMENT_WORKFLOW_GUIDE.md  FRAMEWORK_COMPLETION_STATUS.md  IMPLEMENTATION_GUIDE.md  QUICK_START_GUIDE.md  README.md
openai-prep/: openai_roadmap_summary.ipynb  perp_plan_grok.ipynb  prep_plan.ipynb  prep_plan_claude.ipynb  prep_plan_gpt.ipynb  prep_plan_grok_month13.ipynb  prep_plan_grok_month7plus.ipynb
problems-techs-reference/: COMPREHENSIVE_EDA_CHEAT_SHEET.md  KAGGLE_EDA_PRACTICE_PROBLEMS_ENHANCED.md  KAGGLE_PRACTICE_BY_MODEL_TYPE.md  ML_FEATURE_ANALYSIS_CHEATSHEET.md  ML_FEATURE_ANALYSIS_CHEAT_SHEET_PART2.md  null_analysis_improvements_summary.md  schedule.ipynb
scripts/: cli_wrapper.py  ds_project_setup.py
(+191 files in other folders)
