[project]
name = "eda-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "xgboost",
    "lightgbm",
    "shap>=0.44",
    "numba>=0.56.0",
    "llvmlite>=0.39.0",
    "optuna",
    "statsmodels",
    "scipy",
    "kagglehub>=0.3.13",
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
    "pickleshare>=0.7.5",
    "ipykernel",
]

[tool.uv]
